WindGroup Dev/src/objects/Journal_Voucher__c.object
<CustomObject>
    <fields>
        <fullName>Amount_Indicator__c</fullName>
        <formula>IF( Rollup_Cr_Amount__c  &lt;&gt;  Rollup_Dr_Amount__c , IMAGE(&quot;/servlet/servlet.FileDownload?file=015O00000026Zzj&quot;, &quot;Red&quot;,25, 25) , IMAGE(&quot;/servlet/servlet.FileDownload?file=015O00000026Zzo&quot;, &quot;Green&quot;,25, 25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cash_Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Receipt</label>
        <referenceTo>Cash_Receipt__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Currency_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deposit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deposit</label>
        <referenceTo>Deposit__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Description__c</fullName>
        <label>Document Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fiscal_Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Period</label>
        <referenceTo>Fiscal_Period__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice Line Item</label>
        <referenceTo>Invoice_Line_Item__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Journal_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal Batch</label>
        <referenceTo>Journal_Batch__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_Voucher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Voucher</label>
        <referenceTo>Payment_Voucher__c</referenceTo>
        <relationshipLabel>Journal Vouchers</relationshipLabel>
        <relationshipName>Journal_Vouchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Posting_Allowed__c</fullName>
        <formula>IF (
				
ISPICKVAL(Fiscal_Period__r.Allow_Posting__c,  &quot;NO&quot;), &quot;NO&quot;, &quot;YES&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Posting Allowed</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posting_Date__c</fullName>
        <label>Posting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Posting_Status__c</fullName>
        <label>Posting Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Unposted</fullName>
                </value>
                <value>
                    <fullName>Posted</fullName>
                </value>
                <value>
                    <fullName>Void</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rollup_Cr_Amount__c</fullName>
        <label>Rollup Cr Amount</label>
        <summarizedField>Journal_Entry__c.Cr_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Journal_Entry__c.Cr_Amount__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Journal_Entry__c.Currency_Code__c</field>
            <operation>equals</operation>
            <value>MMK</value>
        </summaryFilterItems>
        <summaryForeignKey>Journal_Entry__c.Journal_Voucher__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Rollup_Dr_Amount__c</fullName>
        <label>Rollup Dr Amount</label>
        <summarizedField>Journal_Entry__c.Dr_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Journal_Entry__c.Dr_Amount__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Journal_Entry__c.Currency_Code__c</field>
            <operation>equals</operation>
            <value>MMK</value>
        </summaryFilterItems>
        <summaryForeignKey>Journal_Entry__c.Journal_Voucher__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Tenant_Id__c</fullName>
        <description>Tenant Id based on JV type</description>
        <inlineHelpText>Tenant Id based on JV type</inlineHelpText>
        <label>Tenant Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Journal Voucher</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Amount__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Journal Voucher</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Journal Vouchers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>